done for chatbot